[workspace]
resolver = "2"
members = [
    # core ibc implementation
    "ibc/derive",
    "ibc/modules",
    "ibc/proto",
    "ibc/proto-compiler",

    # ibc contracts for different blockchain runtimes
    "contracts/pallet-ibc/ping",
    "contracts/pallet-ibc/primitives",
    "contracts/pallet-ibc/rpc",
    "contracts/pallet-ibc/runtime-api",
    "contracts/pallet-ibc",
    "contracts/pallet-ibc/simple-iavl",

    # algorithms
    "algorithms/beefy/verifier",
    "algorithms/beefy/prover",
    "algorithms/beefy/primitives",
    "algorithms/grandpa/verifier",
    "algorithms/grandpa/prover",
    "algorithms/grandpa/primitives",

    # ibc light clients
    "light-clients/common",
    "light-clients/cf-guest-cw",
    "light-clients/ics07-tendermint",
    "light-clients/ics07-tendermint-cw",
    "light-clients/ics08-wasm",
    "light-clients/ics10-grandpa",
    "light-clients/ics10-grandpa-cw",
    "light-clients/ics11-beefy",
    "light-clients/ics13-near",

    # hyperspace
    "hyperspace",
    "hyperspace/core",
    "hyperspace/primitives",
    "hyperspace/parachain",
    "hyperspace/cosmos",
    "hyperspace/testsuite",
    "hyperspace/metrics",

    # utilities
    "utils/subxt/codegen",
    "utils/subxt/generated",
    "utils/parachain-node",
    "utils/parachain-node/runtime",
#     "utils/simnode"
]

[patch."https://github.com/paritytech/jsonrpsee"]
jsonrpsee = { version = "0.16.3" }

[patch."https://github.com/paritytech/substrate"]
sc-executor = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-executor-common = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-api-proc-macro = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-core-hashing = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-externalities = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-keyring = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-keystore = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-panic-handler = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-state-machine = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-storage = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-tracing = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-trie = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-timestamp = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-version = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-version-proc-macro = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-weights = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
try-runtime-cli = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-aura = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-babe = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-consensus-beefy = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-consensus-beefy-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
binary-merkle-tree = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
fork-tree = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-election-provider-solution-type = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-election-provider-support = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-executive = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-support = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-system-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
frame-try-runtime = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
mmr-gadget = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
mmr-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-assets = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-authorship = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-bags-list = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-balances = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-beefy = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-beefy-mmr = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-bounties = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-child-bounties = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-collective = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-conviction-voting = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-democracy = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-fast-unstake = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-grandpa = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-identity = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-im-online = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-indices = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-membership = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-mmr = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-multisig = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-nis = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-nomination-pools = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-offences = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-preimage = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-proxy = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-ranked-collective = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-recovery = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-referenda = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-scheduler = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-session = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-session-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-society = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-staking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-staking-runtime-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-state-trie-migration = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-sudo = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-tips = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-treasury = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-utility = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-vesting = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
pallet-whitelist = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-authority-discovery = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-block-builder = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-chain-spec-derive = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-cli = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-client-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-client-db = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-consensus = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-consensus-grandpa = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-informant = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-keystore = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-network = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-network-bitswap = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-network-common = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-network-light = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-network-sync = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-network-transactions = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-offchain = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-peerset = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-proposer-metrics = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-rpc-server = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-rpc-spec-v2 = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-service = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-state-db = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-storage-monitor = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-sysinfo = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-telemetry = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-tracing = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-tracing-proc-macro = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sc-utils = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-authority-discovery = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-consensus-beefy = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-block-builder = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-blockchain = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-consensus = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-core-hashing-proc-macro = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-database = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-consensus-grandpa = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-inherents = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-mmr-primitives = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-npos-elections = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-offchain = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-session = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-staking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.43" }

[profile.release]
overflow-checks = true
