[package]
name = "hyperspace"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <wizdave97@gmail.com>"]

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "sync", "time", "rt-multi-thread"] }
clap = { workspace = true }
anyhow = "1.0.66"
hyperspace-core = { path = "./core" }
toml = { workspace = true }

[features]
