[package]
edition = "2021"
homepage = "https://composable.finance"
name = "pallet-ibc"
version = "0.0.1"
authors = [
	"Seun Lanlege <seunlanlege@gmail.com>",
	"David Salami <wizdave97@gmail.com>",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo-udeps.ignore]
normal = [
	"frame-benchmarking",
	"pallet-ibc-ping",
	"balances",
	"pallet-assets",
	"simple-iavl",
]

[dependencies]
# crates.io
log = { version = "0.4.0", default-features = false }
serde = { workspace = true }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }
serde_json = { workspace = true }
sha2 = { version = "0.10.2", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = [
	"from",
	"display",
] }
# substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43", default-features = false }
sp-core = { workspace = true }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-trie = { workspace = true }
# ibc
ibc-proto = { path = "../../ibc/proto", default-features = false }
tendermint = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }       # cannot be defined as optional in workspace
tendermint-proto = { workspace = true }
ics23 = { workspace = true }

grandpa-client-primitives = { package = "grandpa-light-client-primitives", path = "../../algorithms/grandpa/primitives", default-features = false }
beefy-client-primitives = { package = "beefy-light-client-primitives", path = "../../algorithms/beefy/primitives", default-features = false }
light-client-common = { path = "../../light-clients/common", default-features = false }
ics08-wasm = { path = "../../light-clients/ics08-wasm", default-features = false }
ics10-grandpa = { path = "../../light-clients/ics10-grandpa", default-features = false }
ics11-beefy = { path = "../../light-clients/ics11-beefy", default-features = false }
ics07-tendermint = { path = "../../light-clients/ics07-tendermint", default-features = false }
hex = { version = "0.4.3", default-features = false }
# local deps
ibc-primitives = { path = "primitives", default-features = false }

# optional
hex-literal = { version = "0.3.4", default-features = false, optional = true }
prost = { workspace = true }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
pallet-ibc-ping = { path = "ping", default-features = false, optional = true }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
simple-iavl = { path = "simple-iavl", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
finality-grandpa = { version = "0.16.2", features = [
	"derive-codec",
], default-features = false, optional = true }

parity-scale-codec = { workspace = true, features = ["derive", "full"] }
ibc = { workspace = true }
ibc-derive = { workspace = true }


[dependencies.tendermint-light-client-verifier]
git = "https://github.com/informalsystems/tendermint-rs"
rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1"
default-features = false

[dev-dependencies]
chrono = "0.4.19"
hex = { workspace = true }
hex-literal = { version = "0.3.4" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.43" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.43" }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
frame-support = { workspace = true }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
prost = { version = "0.11" }
#simple-iavl = { path = "simple-iavl" }
sp-keyring = { workspace = true }
tendermint = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
pallet-ibc-ping = { path = "ping", default-features = false }
sp-keystore = { workspace = true }
env_logger = "0.10.0"

[dev-dependencies.ibc]
path = "../../ibc/modules"
features = ["mocks"]

[features]
default = ["std"]
testing = []
std = [
	"parity-scale-codec/std",
	"log/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"sha2/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-trie/std",
	"balances/std",
	"cumulus-primitives-core/std",
	"pallet-assets/std",
	"ibc/std",
	"ibc-proto/std",
	"ibc-primitives/std",
	"parachain-info/std",
	"grandpa-client-primitives/std",
	"beefy-client-primitives/std",
	"light-client-common/std",
	"ics10-grandpa/std",
	"ics11-beefy/std",
	"ics07-tendermint/std",
	"sp-consensus-grandpa/std",
	"sp-consensus-grandpa/std",
	"finality-grandpa/std",
	"hex/std",
	"pallet-timestamp/std",
	"ics08-wasm/std",
	"pallet-ibc-ping?/std",
	"simple-iavl/std",
	"chrono/std",
	"ics23/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pallet-aura?/std",
	"pallet-membership?/std",
	"prost/std",
	"sp-consensus-aura?/std",
	"sp-consensus-slots?/std",
	"sp-keystore/std",
	"tendermint/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
	"pallet-ibc-ping",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"hex-literal",
	"pallet-assets/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-aura",
	"pallet-membership",
	"pallet-assets",
	"balances",
	"sp-consensus-slots",
	"sp-consensus-aura/serde",
	"sp-consensus-aura/std",
	"ibc-primitives/runtime-benchmarks",
	"sp-consensus-grandpa",
	"finality-grandpa",
	"pallet-ibc-ping/runtime-benchmarks",
	"frame-benchmarking?/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-assets?/runtime-benchmarks",
	"balances?/runtime-benchmarks",
	"pallet-membership?/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]

try-runtime = ["frame-support/try-runtime"]
